--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "belajar-nodejs-unit-test",
+  "name": "belajar-nodejs-logging",
   "version": "1.0.0",
-  "description": "Belajar NodeJS Unit Test",
+  "description": "Belajar NodeJS Logging",
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "test": "jest"
   },
   "jest": {
-    "maxConcurrency" : 2,
+    "maxConcurrency": 2,
     "verbose": true,
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
@@ -34,5 +34,9 @@
     "@babel/preset-env": "^7.17.12",
     "babel-jest": "^28.1.0",
     "jest": "^28.1.0"
+  },
+  "dependencies": {
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
